# 0x21e8

./: .gitignore  0x21e8.service  CHANGELOG.md  Makefile  Pipfile  README.md  TrezorCrypto-0.0.1-cp39-cp39-linux_x86_64.whl  docker-compose.yaml  env.example  install-service.sh  install.sh  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties
.github/workflows/: CI.yml  tag-release.yml  unit-test.yml
0x21e8/: config.py  encryption.py  liquid.py  main.py  model.py  notarize.py  rddl.py  secret.txt  storage.py  test_encryption.py  test_main.py
0x21e8/wallet/: base_wallet.py  issue2liquid.py  keymanagement.py  keystore.py  liquid.py  planetmint.py  sw_wallet.py  utils.py
conf/: redis.conf
docker/: Dockerfile
external_packages_armv7/: zenroom-2.1.0.dev1655293214-cp39-cp39-linux_armv7l.whl  zenroom-2.1.0.dev1662451250-cp39-cp39-linux_armv7l.whl  zenroom-2.3.4-cp39-cp39-linux_armv7l.whl
tests/: test_data_storage.py  test_eddsa_auth.py  test_encryption.py  test_liquid.py  test_main.py  test_mashine_router.py  test_wallet.py
x21e8/: config.py  encryption.py  liquid.py  main.py  model.py  notarize.py  rddl.py  storage.py
x21e8/application/: liquid.py  planetmint.py  rddl.py  token.py
x21e8/lib/: encryption.py  storage.py
x21e8/models/: issuing_request.py  nft_asset.py  token_related_accounts.py  transfer.py
x21e8/network/liquid/: __init__.py  liquid_network_definitions.py
x21e8/routers/: assets.py  config.py  data.py  machine.py  seed.py  utils.py  wallet.py
x21e8/utils/: cointype.py  eddsa_auth.py  encryption.py  storage.py
x21e8/wallet/: keymanagement.py  liquid_network_definitions.py  planetmint.py  sw_wallet.py  util.py  utils.py
x21e8/wallet/planetmint/: keystore.py
