[tool.poetry]
name = "0x21e8"
version = "0.1.0"
description = "x"
authors = ["Firat Berk Cakar <firat@riddleandcode.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
TrezorCryptoTestRc = "*" 
wallycore = "0.8.2"
mnemonic = "^0.20"
fastapi = "^0.85.0"
bitcoin-utils = "^0.5.6"
w3storage = "^0.0.1"
requests = ">2.20.0"
mypy = "^0.982"
python-decouple = "^3.6"
pysha3 = "^1.0.2"
cryptography = "3.4.7"
python-rapidjson = ">1.0.0"
python-rapidjson-schema = "0.1.1"
base58 = "^2.1.1"
pynacl = "1.4.0"
pyasn1 = "^0.4.8"
planetmint-cryptoconditions = "^0.10.0"
planetmint-ipld = "^0.0.3"
zenroom = {path = "external_packages_armv7/zenroom-2.1.0.dev1655293214-cp39-cp39-linux_armv7l.whl"}
planetmint-driver = "0.11.1"
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
twine = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

