[tool.poetry]
name = "x21e8"
version = "0.3.0"
description = "x"
authors = ["Firat Berk Cakar <firat@riddleandcode.com>", "JÜrgen Eckel <juergen@riddleandcode.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
TrezorCryptoTestRc = "*" 
wallycore = "0.8.7"
mnemonic = "^0.20"
fastapi = "^0.85.0"
bitcoin-utils = "^0.5.6"
w3storage = "^0.0.1"
requests = ">2.20.0"
mypy = "^0.982"
python-decouple = "^3.6"
pysha3 = "^1.0.2"
python-rapidjson = ">1.0.0"
python-rapidjson-schema = "0.1.1"
planetmint-ipld = "^0.0.3"
uvicorn = "^0.19.0"
planetmint-driver = "^0.16.0"
zenroom = "2.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
twine = "^4.0.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

