[tool.poetry]
name = "x21e8"
version = "0.6.1"
description = "x"
authors = ["Firat Berk Cakar <firat@riddleandcode.com>", "Jürgen Eckel <juergen@riddleandcode.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
TrezorCryptoTestRc = "*" 
mnemonic = "^0.20"
fastapi = "^0.85.0"
bitcoin-utils = "^0.5.6"
w3storage = "^0.0.1"
requests = ">2.20.0"
mypy = "^0.982"
python-decouple = "^3.6"
pysha3 = "^1.0.2"
python-rapidjson = ">1.0.0"
python-rapidjson-schema = "0.1.1"
multiformats = "^0.2.1"
uvicorn = "^0.19.0"
planetmint-driver = "0.18.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

